--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <!-- 表示領域を自動で調整 -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <!-- デバイスサイズ1025px以下 -->
-  <link rel="stylesheet" type="text/css" media="only screen and (max-device-width:1025px)" href="sp_style.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (max-device-width:1025px)" href="./sp_style.css" >
   <!-- デバイスサイズ1025px以上 -->
-  <link rel="stylesheet" type="text/css" media="screen and (min-device-width:1025px)" href="pc_style.css" />
+  <link rel="stylesheet" type="text/css" media="screen and (min-device-width:1025px)" href="./pc_style.css" >
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
@@ -63,26 +66,24 @@
         <p class="title">こだわりの麺</p>
         <hr>
         <p>
-          こだわりの麺こだわりの麺こだわりの麺こだわりの麺こだわりの麺<br>
-          こだわりの麺こだわりの麺こだわりの麺こだわりの麺こだわりの麺<br>
-          こだわりの麺こだわりの麺こだわりの麺こだわりの麺こだわりの麺<br>
+          昭和35年から続く、いくつもの有名ラーメン店を支えている本格派の製麺所から仕入れた麺。
         </p>
       </div>
     </div>
     <div class="picky">
-      <div class="text-contents">
-        <p class="title">こだわりのタレ</p>
-        <hr>
-        <p>
-          こだわりのタこだわりのタレこだわりのタレこだわりのタレレ<br>
-          こだわりのタこだわりのタレこだわりのタレこだわりのタレレ<br>
-          こだわりのタこだわりのタレこだわりのタレこだわりのタレレ<br>
-        </p>
-      </div>
       <div class="picky_img">
         <img src="img/tare.jpg">
 
       </div>
+      <div class="text-contents">
+        <p class="title">こだわりのタレ</p>
+        <hr>
+        <p>
+          試行錯誤を重ねてついにたどり着いた「麺との相性の境地」<br>
+          我々の本気をぶつけた４種類のタレをご堪能あれ。
+        </p>
+      </div>
+
     </div>
     <div class="picky">
       <div class="picky_img">
@@ -92,9 +93,7 @@
         <p class="title">こだわりの肉味噌</p>
         <hr>
         <p>
-          こだわりの肉味噌こだわりの肉味噌こだわりの肉味噌こだわりの肉味噌<br>
-          こだわりの肉味噌こだわりの肉味噌こだわりの肉味噌こだわりの肉味噌<br>
-          こだわりの肉味噌こだわりの肉味噌こだわりの肉味噌こだわりの肉味噌<br>
+          麺とタレの素材を最大限に引き出すために研究を重ねた逸品。香ばしい香りが食欲を書き立てること間違いなし。
         </p>
       </div>
     </div>
