--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- デバイスサイズ1025px以下 -->
-  <link rel="stylesheet" type="text/css" media="only screen and (max-device-width:1025px)" href="./sp_style.css" >
+  <link rel="stylesheet" type="text/css" media="only screen and (max-device-width:500px)" href="./sp_style.css" >
   <!-- デバイスサイズ1025px以上 -->
-  <link rel="stylesheet" type="text/css" media="screen and (min-device-width:1025px)" href="./pc_style.css" >
+  <link rel="stylesheet" type="text/css" media="screen and (min-device-width:500px)" href="./pc_style.css" >
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
@@ -28,7 +28,8 @@
       <img src="img/dropdown.png" alt="">
       <ul>
         <li><a href="#pickies">こだわり</a></li>
-        <li><a href="#menu">メニュー</a></li>
+        <li class="pc-design"><a href="#menu">メニュー</a></li>
+        <li class="sp-design"><a href="#menu2">メニュー</a></li>
         <li><a href="#members">メンバー</a></li>
         <li><a href="#store">店舗情報</a></li>
       </ul>
@@ -45,7 +46,7 @@
   </div>
 
   <div class="contents about" id="about">
-    <h2 class="topics">飯塚製麺所Rとは</h2>
+    <h2 class="topics"><span class="under">飯塚製麺所Rとは</span></h2>
     <div class="text">
       <p>
         飯塚製麺所Rとは、まぜそばと飯塚が大好きな九工大生24人が集まり、まぜそばで飯塚を盛り上げることを目的とした工大祭の模擬店です。<br>
@@ -56,11 +57,10 @@
   </div>
 
   <div class="contents pickies" id="pickies">
-    <h2 class="topics">こだわり</h2>
+    <h2 class="topics"><span class="under">こだわり</span></h2>
     <div class="picky">
       <div class="picky_img">
         <img src="img/men.jpg">
-
       </div>
       <div class="text-contents">
         <p class="title">こだわりの麺</p>
@@ -79,8 +79,7 @@
         <p class="title">こだわりのタレ</p>
         <hr>
         <p>
-          試行錯誤を重ねてついにたどり着いた「麺との相性の境地」<br>
-          我々の本気をぶつけた４種類のタレをご堪能あれ。
+          試行錯誤を重ねてついにたどり着いた『麺との相性の境地』我々の本気をぶつけた４種類のタレをご堪能あれ。
         </p>
       </div>
 
@@ -100,7 +99,7 @@
   </div>
 
   <div class="contents menu" id="menu">
-    <h2 class="topics">メニュー</h2>
+    <h2 class="topics"><span class="under">メニュー</span></h2>
     <div class="slick-box">
       <div>
         <img src="img/menu03.jpg">
@@ -120,33 +119,65 @@
     </div>
   </div>
 
+  <div class="contents menu2" id="menu2">
+    <h2 class="topics"><span class="under">メニュー</span></h2>
+    <div class="menu-list">
+      <div>
+        <p class="name">台湾風まぜそば</p>
+        <p class="price"><span class="under2">350円</span></p>
+      </div>
+      <div>
+        <p class="name">ネギ盛まぜそば</p>
+        <p class="price"><span class="under2">400円</span></p>
+      </div>
+      <div>
+        <p class="name">カルボナーラ風まぜそば</p>
+        <p class="price"><span class="under2">400円</span></p>
+      </div>
+    </div>
+  </div>
+
   <div class="contents members" id="members">
-    <h2 class="topics">メンバー</h2>
+    <h2 class="topics"><span class="under">メンバー</span></h2>
     <div class="member">
-      <img src="img/honshu.jpg">
-      <h3 class="job">副店長</h3>
-      <h3 class="name">本田 修吾</h3>
-      <p>生命情報　４年</p>
-      <p>メガネ</p>
+      <div class="picky-image">
+        <img src="img/ryoya.jpg">
+      </div>
+      <div class="text-contents">
+        <h3 class="job">店長</h3>
+        <h3 class="name">田中 凌也</h3>
+        <p>生命情報　４年</p>
+        <p>イケメン</p>
+      </div>
     </div>
+
     <div class="member">
-      <img src="img/ryoya.jpg">
-      <h3 class="job">店長</h3>
-      <h3 class="name">田中 凌也</h3>
-      <p>生命情報　４年</p>
-      <p>イケメン</p>
+      <div class="picky-image">
+        <img src="img/honshu.jpg">
+      </div>
+      <div class="text-contents">
+        <h3 class="job">副店長</h3>
+        <h3 class="name">本田 修吾</h3>
+        <p>生命情報　４年</p>
+        <p>メガネ</p>
+      </div>
     </div>
+
     <div class="member">
-      <img src="img/kogami.jpg">
-      <h3 class="job">副店長</h3>
-      <h3 class="name">小神 寛晴</h3>
-      <p>生命情報　４年</p>
-      <p>イキリ</p>
+      <div class="picky-image">
+        <img src="img/kogami.jpg">
+      </div>
+      <div class="text-contents">
+        <h3 class="job">副店長</h3>
+        <h3 class="name">小神 寛晴</h3>
+        <p>生命情報　４年</p>
+        <p>イキリ</p>
+      </div>
     </div>
   </div>
 
   <div class="contents store" id="store">
-    <h2 class="topics">店舗情報</h2>
+    <h2 class="topics"><span class="under">店舗情報</span></h2>
     <div class="info-text">
       <p class="address">〒820-8502 福岡県飯塚市川津６８０−４</p>
       <p class="detail">九州工業大学運動場ステージ付近</p>
