edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <img src="img/dropdown.png" alt="">
       <ul>
         <li><a href="#pickies">こだわり</a></li>
-        <li class="pc-design"><a href="#menu">メニュー</a></li>
         <li class="sp-design"><a href="#menu2">メニュー</a></li>
         <li><a href="#members">メンバー</a></li>
         <li><a href="#store">店舗情報</a></li>
@@ -122,7 +121,27 @@
   <div class="contents menu2" id="menu2">
     <h2 class="topics"><span class="under">メニュー</span></h2>
     <div class="menu-list">
-      <div>
+      <table class="brwsr1">
+        <tbody>
+          <tr>
+            <th class="r1">商品名</th>
+            <th class="r2">料金</th>
+          </tr>
+          <tr>
+            <th class="r1">元祖まぜそば</th>
+            <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
+          </tr>
+          <tr>
+            <th class="r1">台湾風まぜそば</th>
+            <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
+          </tr>
+          <tr>
+            <th class="r1">ゴールデンドラゴン</th>
+            <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- <div>
         <p class="name">台湾風まぜそば</p>
         <p class="price"><span class="under2">350円</span></p>
       </div>
@@ -133,7 +152,8 @@
       <div>
         <p class="name">カルボナーラ風まぜそば</p>
         <p class="price"><span class="under2">400円</span></p>
-      </div>
+      </div> -->
+
     </div>
   </div>
 
