edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -97,26 +97,6 @@
     </div>
   </div>
 
-  <div class="contents menu" id="menu">
-    <h2 class="topics"><span class="under">メニュー</span></h2>
-    <div class="slick-box">
-      <div>
-        <img src="img/menu03.jpg">
-        <p class="name">台湾風まぜそば</p>
-        <p class="price">350円</p>
-      </div>
-      <div>
-        <img src="img/menu01.jpg">
-        <p class="name">ネギ盛まぜそば</p>
-        <p class="price">400円</p>
-      </div>
-      <div>
-        <img src="img/menu02.jpg">
-        <p class="name">カルボナーラ風まぜそば</p>
-        <p class="price">400円</p>
-      </div>
-    </div>
-  </div>
 
   <div class="contents menu2" id="menu2">
     <h2 class="topics"><span class="under">メニュー</span></h2>
@@ -138,6 +118,14 @@
           <tr>
             <th class="r1">ゴールデンドラゴン</th>
             <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
+          </tr>
+          <tr>
+            <th class="r1">激辛まぜそば</th>
+            <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
+          </tr>
+          <tr>
+            <th class="r1">ジュース各種</th>
+            <td class="r2"><span class="under2">100</span><span class="under3">円</span></td>
           </tr>
         </tbody>
       </table>
