edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
           </tr>
           <tr>
-            <th class="r1">台湾風まぜそば</th>
+            <th class="r1">秘伝の味噌味</th>
             <td class="r2"><span class="under2">400</span><span class="under3">円</span></td>
           </tr>
           <tr>
