edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <div class="member">
       <div class="picky-image">
-        <img src="img/honshu.jpg">
+        <img src="img/honda.jpg">
       </div>
       <div class="text-contents">
         <h3 class="job">副店長</h3>
@@ -182,6 +182,40 @@
         <p>イキリ</p>
       </div>
     </div>
+    <div class="member">
+      <div class="picky-image">
+        <img src="img/kogami.jpg">
+      </div>
+      <div class="text-contents">
+        <h3 class="job">テクニカル アドバイザー</h3>
+        <h3 class="name">荒木　健也</h3>
+        <p>システム情報　４年</p>
+        <p>ラーメン界の新星</p>
+      </div>
+    </div>
+    <div class="member">
+      <div class="picky-image">
+        <img src="img/kogami.jpg">
+      </div>
+      <div class="text-contents">
+        <h3 class="job">元店長</h3>
+        <h3 class="name">原野真一郎</h3>
+        <p>生命情報　３年</p>
+        <p>一流（一留）</p>
+      </div>
+    </div>
+    <div class="member">
+      <div class="picky-image">
+        <img src="img/inoue.jpg">
+      </div>
+      <div class="text-contents">
+        <h3 class="job">店番</h3>
+        <h3 class="name">井上　祐太</h3>
+        <p>生命情報　４年</p>
+        <p>ペット</p>
+      </div>
+    </div>
+
   </div>
 
   <div class="contents store" id="store">
@@ -193,6 +227,9 @@
     </div>
     <div class="info-img">
       <img src="img/store.png" alt="">
+    </div>
+    <div class="info-img">
+      <img src="img/map.png" alt="">
     </div>
   </div>
 
