edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <img src="img/kogami.jpg">
       </div>
       <div class="text-contents">
-        <h3 class="job">元店長</h3>
+        <h3 class="job">CEO</h3>
         <h3 class="name">原野真一郎</h3>
         <p>生命情報　３年</p>
         <p>一流（一留）</p>
