edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </div>
     <div class="member">
       <div class="picky-image">
-        <img src="img/kogami.jpg">
+        <img src="img/shin.png">
       </div>
       <div class="text-contents">
         <h3 class="job">CEO</h3>
