edit:sp.css pc.css index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" media="screen and (min-device-width:500px)" href="./pc_style.css" >
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="./slick/slick.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./slick/slick.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" media="screen" />
@@ -184,7 +184,7 @@
     </div>
     <div class="member">
       <div class="picky-image">
-        <img src="img/kogami.jpg">
+        <img src="img/araki.jpg">
       </div>
       <div class="text-contents">
         <h3 class="job">テクニカル アドバイザー</h3>
@@ -195,7 +195,7 @@
     </div>
     <div class="member">
       <div class="picky-image">
-        <img src="img/shin.png">
+        <img src="img/shin2.jpg">
       </div>
       <div class="text-contents">
         <h3 class="job">CEO</h3>
@@ -220,16 +220,13 @@
 
   <div class="contents store" id="store">
     <h2 class="topics"><span class="under">店舗情報</span></h2>
+    <div class="info-img">
+      <img src="img/map.png" alt="">
+    </div>
     <div class="info-text">
       <p class="address">〒820-8502 福岡県飯塚市川津６８０−４</p>
       <p class="detail">九州工業大学運動場ステージ付近</p>
       <p class="time">新飯塚駅より徒歩40分</p>
-    </div>
-    <div class="info-img">
-      <img src="img/store.png" alt="">
-    </div>
-    <div class="info-img">
-      <img src="img/map.png" alt="">
     </div>
   </div>
 
